<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_bold"
        android:text="Login"
        android:textColor="@color/blue"
        android:textSize="40dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/enterPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica"
        android:text="@string/enter_your_phone_number"
        android:textColor="@color/black"
        android:textSize="23dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:visibility="visible"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/light_white"
        android:backgroundTint="@color/off_white"
        android:ems="10"
        android:hint="  Phone number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPhoneNumber"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/otpNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica"
        android:text="@string/enter_otp"
        android:textColor="@color/black"
        android:textSize="23dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:paddingBottom="10dp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/Otp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/off_white"
        android:ems="10"
        android:hint="@string/otp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpNumber"
        app:layout_constraintVertical_bias="0.002" />



    <Button
        android:id="@+id/sendOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_otp"
        android:textColor="@color/off_white"
        android:textAllCaps="false"
        android:visibility="visible"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <Button
        android:id="@+id/verify"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/verify"
        android:visibility="gone"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="25dp" />

</LinearLayout>